<resources>
    <string name="app_name">UProgress</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="nick">User nick</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="restore_password">Password</string>
    <string name="loading">Loading...</string>
    <string name="directions_list_menu_title">Actions</string>
    <string name="directions_list_menu_edit">Edit</string>
    <string name="directions_list_menu_delete">Delete</string>
    <string name="step_success_update_message">Step state changed to %1$s</string>
    <string name="steps_failed_update_message">Unfortunately, an error has occurred</string>
    <string name="step_update_true">\"Finished\"</string>
    <string name="step_update_false">\"In progress\"</string>
    <string name="user_name">Name</string>
    <string name="user_nick">Nick</string>
    <string name="user_location">Location</string>
    <string name="user_description">Description</string>
    <string name="user_email">Email</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="directions_title">Directions</string>
    <string name="direction_title">Direction</string>
    <string name="statistiscs_title">Statistics</string>

    <string name="statistics_directions">Directions</string>
    <string name="statistics_steps">Steps</string>
    <string name="statistics_directions_steps">Direction\'s steps</string>

    <string name="navigation_item_sign_in">Sign in</string>
    <string name="navigation_item_sign_up">Sign up</string>
    <string name="navigation_item_directions">Directions</string>
    <string name="navigation_item_statistics">Statistics</string>
    <string name="navigation_item_sign_out">Sign out</string>

    <string name="user_profile_first_name">First name</string>
    <string name="user_profile_last_name">Last name</string>
    <string name="user_profile_email">Email</string>
    <string name="user_profile_nick">Nick</string>
    <string name="user_profile_location">Location</string>
    <string name="user_profile_description">Description</string>
    <string name="user_profile_photo">Take a photo</string>
    <string name="user_profile_collection">Upload from collection</string>

    <string name="internal_server_error">Internal server error. Please try it later</string>
    <string name="not_found">Resource was not found</string>

    <string name="empty_directions_list">There is no directions</string>

    <string name="restore_password_button">Restore password</string>

    <string name="reset_password">Reset password</string>
    <string name="reset_password_button">Reset password</string>

    <string name="reset_password_success">Your password wa succesfully change</string>
</resources>
